# Data-Engineering-Zoomcamp

./: .gitignore
01_Week 1/Terraform/: main.tf
02_Week2/CourseWork/: tlc_data_load.yaml
02_Week2/homework_wk2/: README.md  kestra_flow.yaml  s3_query.py
03_Week3/homework_wk3/: README.md  migrate.py  queries.py
Week 1/Terraform/: variables.tf
Week 1/pipeline/: ingestion.py
homework_wk1/: README.md  ingestion.ipynb  pyproject.toml  queries.sql
pipeline/: ingest_data.ipynb
